# backend/src/main/resources/openapi.yml
@@ -150,4 +150,40 @@ components:
         - application
         - version
         - timestamp
+    ErrorResponse:
+      type: object
+      properties:
+        message:
+          type: string
+        status:
+          type: integer
+          format: int32
+        timestamp:
+          type: string
+          format: date-time
+      required:
+        - message
+        - status
+        - timestamp
+    ValidationErrorResponse:
+      allOf:
+        - $ref: "#/components/schemas/ErrorResponse"
+        - type: object
+          properties:
+            errors:
+              type: array
+              items:
+                $ref: "#/components/schemas/ValidationError"
+          required:
+            - errors
+    ValidationError:
+      type: object
+      properties:
+        message:
+          type: string
+        field:
+          type: string
+      required:
+        - message
+        - field
 
